# KG-MMML

./: .gitignore  README.md
kg-mmml/: .gitignore  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  EXPERIMENT_COMPLETION.md  Makefile  README.md  WEEK9_COMPLETION.md  pyproject.toml
kg-mmml/archive/docs/: EXPERIMENT_COMPLETION.md  WEEK9_COMPLETION.md  WEEK9_PLAN.md
kg-mmml/configs/: experiment_baseline.yaml  experiment_joint.yaml  experiment_kge.yaml  experiment_kge_enhanced.yaml
kg-mmml/data/: README.md
kg-mmml/datasets/sec_edgar/: DATA_CHOICE.md  README.md  README_SEC_OPTION_A.md
kg-mmml/docs/: 01_METHODOLOGY.md  02_RESULTS_NARRATIVE.md  02_WEEK7-8_RESULTS.md  03_CONCLUSION.md  03_WEEK9_RESULTS.md  04_RESULTS_NARRATIVE.md  05_CONCLUSION.md  Architecture.md  EvaluationSheet_v1.md  Glossary.md  M10_PLAN.md  M10_SINGLE_SEED_VALIDATION_REPORT.md  M10_STATISTICAL_VALIDATION_README.md  M10_VERIFICATION_SUMMARY.md  M5_COMPLETE.md  M6_PLAN.md  M7_IMPLEMENTATION_COMPLETE.md  M7_ROBUSTNESS_README.md  M8_SCALABILITY_REPORT.md  M9_PLAN.md  NOTES.md  WEEK9_PLAN.md
kg-mmml/docs/progress/: Week_1-2_Progress.md  Week_11-12_Progress.md  Week_13-14_M7_Robustness.md  Week_15-16_M8_Scalability.md  (+5 more)
kg-mmml/outputs/: README.md
kg-mmml/reports/: ARCHIVE_README.md  EXPERIMENT_RESULTS_SUMMARY.md  KG-MMML_Poster.pptx
kg-mmml/scripts/: m10_statistical_validation.py  m10_test_single_seed.py  m7_test_taxonomy_off.py  m7_test_unit_noise.py  run_m10_all.py  run_m7_all.py
kg-mmml/tests/: test_latency.py  test_srs_metrics.py
(+99 files in other folders)
