[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kg-mmml"
version = "0.1.0"
description = "KG + Multi-Modal ML: reproducible framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "torch>=2.0.0",
  "torchvision",
  "tqdm",
  "pyyaml",
  "networkx",
  "faiss-cpu",
  "matplotlib",
  "requests",
  "annoy"
]

[tool.black]
line-length = 100